--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,93 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.app {
+
+}
+
+.app__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.input {
+    border-radius: 10px;
+    padding: 15px;
+    border: 1px solid #e2e2e2;
+    font-size: 1rem;
+}
+
+/* Main Form */
+.btn {
+    border-radius: 10px;
+    padding: 15px 25px;
+    font-size: 1rem;
+    cursor: pointer;
+    color: #fff;
+    font-weight: bold;
+}
+
+.btn--default {
+    background: gray;
+}
+
+.btn--primary {
+    background: #005d8b;
+}
+
+.btn--primary:hover {
+    background: #0075b2;
+}
+
+
+/* Main Form */
+.main-form {
+    width: auto;
+}
+
+.main-form__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    height: 175px;
+}
+
+.main-form__label {
+    display: flex;
+    align-items: center;
+}
+
+.main-form__btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+@media (min-width: 64em) {
+    .main-form {
+        width: 400px;
+    }
+
+    .main-form__wrapper {
+        flex-direction: row;
+    }
+
+    .main-form__btn-wrapper {
+        display: flex;
+        align-items: center;
+    }
 }
