--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,55 @@ code {
         align-items: center;
     }
 }
+
+/**
+* Modal
+*/
+
+.modal {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.56);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__outer-wrapper {
+    background: #fff;
+    height: 50vh;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 5px;
+}
+
+.modal__inner-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__top-bar {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    background: #005d8b;
+    color: #fff;
+    height: 35px;
+    align-items: center;
+    border-radius: 5px 5px 0 0;
+}
+
+.modal__top-bar-wrapper {
+    width: 90%;
+    justify-content: space-between;
+    display: flex;
+}
+
+.modal__top-bar-close-btn {
+    cursor: pointer;
+    font-weight: bold;
+}
+
