--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ code {
     monospace;
 }
 
+
 .top-wrapper {
     display: flex;
     justify-content: center;
@@ -21,10 +22,11 @@ code {
 }
 
 .content-wrapper {
-    height: 40vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 60vw;
+    max-width: 500px;
 }
 
 .input {
@@ -57,6 +59,7 @@ code {
 .btn--primary:hover {
     background: #0075b2;
 }
+
 
 /**
 * Main Form
@@ -124,7 +127,7 @@ code {
 .post {}
 
 .post__field {
-    margin-bottom: 1.5rem;
+margin-bottom: 1.5rem;
 }
 
 .post__field span {
@@ -135,6 +138,7 @@ code {
     margin-bottom: 0.5rem;
     font-weight: bold;
 }
+
 
 /**
 * Modal
