--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ code {
     flex-direction: column;
     justify-content: space-between;
     width: 60vw;
+    height: 60vh;
     max-width: 500px;
 }
 
@@ -74,7 +75,6 @@ code {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    height: 150px;
 }
 
 .main-form__field {
@@ -191,3 +191,21 @@ margin-bottom: 1.5rem;
     font-weight: bold;
 }
 
+
+/**
+* Errors
+*/
+
+.error-list {
+    list-style: none;
+    margin: 0;
+    display: block;
+    padding: 0;
+}
+
+.error {
+    background: #ffeaf2;
+    border: 1px solid red;
+    padding: 2rem;
+    color: red;
+}
