--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/**
+* Global
+*/
 * {
     box-sizing: border-box;
     -webkit-box-sizing:border-box;
@@ -152,14 +155,18 @@ code {
 /**
 * Edit Post Form
 */
-.edit-post-form{}
+.edit-post-form{
+    width: 75%;
+}
 .edit-post-form__wrapper {
     align-items: normal;
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
 }
 @media (min-width: 64em) {
     .edit-post-form{}
+    .edit-post-form__wrapper{
+    }
     .edit-post-form__field {
        margin-bottom: 1rem;
     }
@@ -205,12 +212,13 @@ margin-bottom: 1.5rem;
 
 .modal__outer-wrapper {
     background: #fff;
-    height: 70vh;
+    height: 100%;
     width: 80%;
     max-width: 500px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    max-height: 700px;
 }
 
 .modal__inner-wrapper {
@@ -227,7 +235,7 @@ margin-bottom: 1.5rem;
     justify-content: center;
     background: #005d8b;
     color: #fff;
-    height: 35px;
+    height: 45px;
     align-items: center;
     border-radius: 5px 5px 0 0;
 }
