--- a/src/index.css
+++ b/src/index.css
@@ -204,6 +204,7 @@ margin-bottom: 1.5rem;
 .modal {
     position: absolute;
     height: 100vh;
+    min-height: 550px;
     width: 100vw;
     z-index: 2;
     background: rgba(0, 0, 0, 0.56);
